fix: revert canonical/sitemap to .html URLs for SEO stability, keep cleanUrls enabled

--- a/arrange-screenshots-for-presentation.html
+++ b/arrange-screenshots-for-presentation.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Arrange Screenshots for Presentation |Clean Professional Layouts</title>
     <meta name="description" content="Arrange screenshots into clean layouts for presentations, reports, or documentation. Professional-looking results without design software.">
-    <link rel="canonical" href="https://www.pictrikit.com/arrange-screenshots-for-presentation">
+    <link rel="canonical" href="https://www.pictrikit.com/arrange-screenshots-for-presentation.html">
     
     <meta property="og:title" content="Arrange Screenshots for Presentation">
     <meta property="og:description" content="Arrange screenshots into clean layouts for presentations and reports. Professional results, no design skills needed.">
-    <meta property="og:url" content="https://www.pictrikit.com/arrange-screenshots-for-presentation">
+    <meta property="og:url" content="https://www.pictrikit.com/arrange-screenshots-for-presentation.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
