--- a/before-after-screenshot.html
+++ b/before-after-screenshot.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Create Before and After Screenshot Comparison |Side by Side Layout</title>
     <meta name="description" content="Create before and after screenshot comparisons with a clean side-by-side layout. Show changes clearly without manual alignment or design work.">
-    <link rel="canonical" href="https://www.pictrikit.com/before-after-screenshot">
+    <link rel="canonical" href="https://www.pictrikit.com/before-after-screenshot.html">
     
     <meta property="og:title" content="Create Before and After Screenshot Comparison">
     <meta property="og:description" content="Create before and after screenshot comparisons with a clean side-by-side layout.">
-    <meta property="og:url" content="https://www.pictrikit.com/before-after-screenshot">
+    <meta property="og:url" content="https://www.pictrikit.com/before-after-screenshot.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
