--- a/clean-screenshot-layout.html
+++ b/clean-screenshot-layout.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Make a Clean Screenshot Layout |Organized Image Arrangements</title>
     <meta name="description" content="Make clean screenshot layouts with consistent spacing and alignment. Arrange multiple screenshots into organized compositions without design skills.">
-    <link rel="canonical" href="https://www.pictrikit.com/clean-screenshot-layout">
+    <link rel="canonical" href="https://www.pictrikit.com/clean-screenshot-layout.html">
     
     <meta property="og:title" content="Make a Clean Screenshot Layout">
     <meta property="og:description" content="Arrange multiple screenshots into clean, organized layouts with consistent spacing.">
-    <meta property="og:url" content="https://www.pictrikit.com/clean-screenshot-layout">
+    <meta property="og:url" content="https://www.pictrikit.com/clean-screenshot-layout.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
