--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Compare App UI Screenshots |Side by Side Interface Comparison</title>
     <meta name="description" content="Compare app UI screenshots side by side. Show interface differences, design iterations, or version changes with clean comparison layouts.">
-    <link rel="canonical" href="https://www.pictrikit.com/compare-ui-screenshots">
+    <link rel="canonical" href="https://www.pictrikit.com/compare-ui-screenshots.html">
     
     <meta property="og:title" content="Compare App UI Screenshots">
     <meta property="og:description" content="Compare app UI screenshots side by side. Show interface differences clearly.">
-    <meta property="og:url" content="https://www.pictrikit.com/compare-ui-screenshots">
+    <meta property="og:url" content="https://www.pictrikit.com/compare-ui-screenshots.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
