--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Contact Us - PictriKit Support</title>
     <meta name="description" content="Get in touch with the PictriKit team. Send us feedback, report issues, or ask questions about our screenshot layout tool.">
-    <link rel="canonical" href="https://www.pictrikit.com/contact">
+    <link rel="canonical" href="https://www.pictrikit.com/contact.html">
     <!-- Open Graph -->
     <meta property="og:title" content="Contact Us - PictriKit Support">
     <meta property="og:description" content="Get in touch with the PictriKit team.">
-    <meta property="og:url" content="https://www.pictrikit.com/contact">
+    <meta property="og:url" content="https://www.pictrikit.com/contact.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
