--- a/privacy.html
+++ b/privacy.html
@@ -13,10 +13,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - PictriKit</title>
   <meta name="description" content="PictriKit Privacy Policy - Learn how we handle your data and protect your privacy.">
-  <link rel="canonical" href="https://www.pictrikit.com/privacy">
+  <link rel="canonical" href="https://www.pictrikit.com/privacy.html">
   <meta property="og:title" content="Privacy Policy - PictriKit">
   <meta property="og:description" content="Learn how PictriKit handles your data and protects your privacy.">
-  <meta property="og:url" content="https://www.pictrikit.com/privacy">
+  <meta property="og:url" content="https://www.pictrikit.com/privacy.html">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
   <meta name="twitter:card" content="summary">
