--- a/put-two-screenshots-together.html
+++ b/put-two-screenshots-together.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Put Two Screenshots Together |Simple Side by Side Tool</title>
     <meta name="description" content="Put two screenshots together side by side or stacked. No design skills needed. Just upload two images and get one clean result.">
-    <link rel="canonical" href="https://www.pictrikit.com/put-two-screenshots-together">
+    <link rel="canonical" href="https://www.pictrikit.com/put-two-screenshots-together.html">
     
     <meta property="og:title" content="Put Two Screenshots Together">
     <meta property="og:description" content="Put two screenshots together side by side or stacked. Simple and fast.">
-    <meta property="og:url" content="https://www.pictrikit.com/put-two-screenshots-together">
+    <meta property="og:url" content="https://www.pictrikit.com/put-two-screenshots-together.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
