--- a/stack-screenshots-vertically.html
+++ b/stack-screenshots-vertically.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Stack Screenshots Vertically |Create Long Screenshot Images</title>
     <meta name="description" content="Stack multiple screenshots vertically into one long image. Perfect for combining scrolling content, chat logs, or sequential screens without cropping.">
-    <link rel="canonical" href="https://www.pictrikit.com/stack-screenshots-vertically">
+    <link rel="canonical" href="https://www.pictrikit.com/stack-screenshots-vertically.html">
     
     <meta property="og:title" content="Stack Screenshots Vertically">
     <meta property="og:description" content="Stack multiple screenshots vertically into one long image. No cropping, no gaps.">
-    <meta property="og:url" content="https://www.pictrikit.com/stack-screenshots-vertically">
+    <meta property="og:url" content="https://www.pictrikit.com/stack-screenshots-vertically.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
