--- a/tutorials.html
+++ b/tutorials.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Tutorials - Learn How to Use PictriKit | Screenshot Layout Guide</title>
     <meta name="description" content="Learn how to create beautiful screenshot layouts with PictriKit. Step-by-step tutorials for Linear, Focus, Grid, Compare layouts and Device Frames.">
-    <link rel="canonical" href="https://www.pictrikit.com/tutorials">
+    <link rel="canonical" href="https://www.pictrikit.com/tutorials.html">
     <!-- Open Graph -->
     <meta property="og:title" content="Tutorials - Learn How to Use PictriKit">
     <meta property="og:description" content="Step-by-step tutorials for creating beautiful screenshot layouts.">
-    <meta property="og:url" content="https://www.pictrikit.com/tutorials">
+    <meta property="og:url" content="https://www.pictrikit.com/tutorials.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
