--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -13,12 +13,12 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Compare Screenshots Side by Side Online |Clean Layout Tool</title>
     <meta name="description" content="Compare screenshots side by side in a clean layout. Arrange multiple screenshots for UI comparison, before-and-after views, or sharing. No design skills required.">
-    <link rel="canonical" href="https://www.pictrikit.com/compare-screenshots">
+    <link rel="canonical" href="https://www.pictrikit.com/compare-screenshots.html">
     
     <!-- Open Graph -->
     <meta property="og:title" content="Compare Screenshots Side by Side Online">
     <meta property="og:description" content="Compare screenshots side by side in a clean layout. Arrange multiple screenshots for UI comparison or before-and-after views.">
-    <meta property="og:url" content="https://www.pictrikit.com/compare-screenshots">
+    <meta property="og:url" content="https://www.pictrikit.com/compare-screenshots.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
