--- a/faq.html
+++ b/faq.html
@@ -13,11 +13,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>FAQ - Frequently Asked Questions | PictriKit</title>
     <meta name="description" content="Find answers to common questions about PictriKit screenshot layout tool. Learn about features, privacy, export options, and more.">
-    <link rel="canonical" href="https://www.pictrikit.com/faq">
+    <link rel="canonical" href="https://www.pictrikit.com/faq.html">
     <!-- Open Graph -->
     <meta property="og:title" content="FAQ - Frequently Asked Questions">
     <meta property="og:description" content="Find answers to common questions about PictriKit.">
-    <meta property="og:url" content="https://www.pictrikit.com/faq">
+    <meta property="og:url" content="https://www.pictrikit.com/faq.html">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <meta property="og:site_name" content="PictriKit">
