--- a/terms.html
+++ b/terms.html
@@ -13,10 +13,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Terms of Service - PictriKit</title>
   <meta name="description" content="PictriKit Terms of Service - Read our terms and conditions for using the service.">
-  <link rel="canonical" href="https://www.pictrikit.com/terms">
+  <link rel="canonical" href="https://www.pictrikit.com/terms.html">
   <meta property="og:title" content="Terms of Service - PictriKit">
   <meta property="og:description" content="Read PictriKit terms and conditions for using the service.">
-  <meta property="og:url" content="https://www.pictrikit.com/terms">
+  <meta property="og:url" content="https://www.pictrikit.com/terms.html">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
   <meta name="twitter:card" content="summary">
