seo: optimize image alt attributes for Google Image Search + update reusable docs

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ Open Web Editor
           <span style="font-size: 0.8rem; font-weight: 600; color: #6b7280; text-transform: uppercase;">Before</span>
         </div>
         <div style="background: #f8fafc; border-radius: 12px; overflow: hidden;">
-          <img src="./assets/images/Snipaste_2026-01-12_19-40-58.png" alt="Before - Raw screenshots" width="520" height="390" style="width: 100%; height: auto; display: block;" fetchpriority="high" />
+          <img src="./assets/images/Snipaste_2026-01-12_19-40-58.png" alt="Multiple scattered screenshots before combining - messy desktop with random image files" width="520" height="390" style="width: 100%; height: auto; display: block;" fetchpriority="high" />
         </div>
         <p style="font-size: 0.75rem; color: #9ca3af; text-align: center; margin-top: 0.75rem;">Scattered screenshots</p>
       </div>
@@ -554,7 +554,7 @@ Open Web Editor
           <span style="font-size: 0.8rem; font-weight: 600; color: #007AFF; text-transform: uppercase;">After</span>
         </div>
         <div style="background: #f0f9ff; border-radius: 12px; overflow: hidden;">
-          <img src="./assets/images/pictrikit-1768218106825.png" alt="After - Professional layout" width="520" height="390" style="width: 100%; height: auto; display: block;" fetchpriority="high" />
+          <img src="./assets/images/pictrikit-1768218106825.png" alt="Professional screenshot grid layout created with PictriKit - clean organized image composition" width="520" height="390" style="width: 100%; height: auto; display: block;" fetchpriority="high" />
         </div>
         <p style="font-size: 0.75rem; color: #007AFF; text-align: center; margin-top: 0.75rem;">Clean, professional layout</p>
       </div>
@@ -702,7 +702,7 @@ Open Web Editor
 </div>
 <div class="showcase-image" style="flex: 1.2;">
 <div class="screenshot-frame" style="max-width: 700px; box-shadow: 0 25px 60px -12px rgba(0,0,0,0.2);">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM2.png" alt="PictriKit Focus Layouts Panel" loading="lazy" style="width: 100%; height: auto; display: block;" />
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM2.png" alt="PictriKit focus layout mode - highlight main screenshot with supporting thumbnails for app showcase" loading="lazy" style="width: 100%; height: auto; display: block;" />
 </div>
 </div>
 </div>
@@ -742,7 +742,7 @@ Open Web Editor
 </div>
 <div class="showcase-image" style="flex: 1.2;">
 <div class="screenshot-frame" style="max-width: 700px; box-shadow: 0 25px 60px -12px rgba(0,0,0,0.2);">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM.png" alt="PictriKit Style Settings Panel" loading="lazy" style="width: 100%; height: auto; display: block;" />
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM.png" alt="PictriKit style customization panel - adjust padding gaps colors and corner radius for screenshot layouts" loading="lazy" style="width: 100%; height: auto; display: block;" />
 </div>
 </div>
 </div>
@@ -782,7 +782,7 @@ Open Web Editor
 </div>
 <div class="showcase-image" style="flex: 1.2;">
 <div class="screenshot-frame" style="max-width: 700px; box-shadow: 0 25px 60px -12px rgba(0,0,0,0.2);">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_10_AM.png" alt="PictriKit Device Frames Panel" loading="lazy" style="width: 100%; height: auto; display: block;" />
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_10_AM.png" alt="PictriKit device mockup frames - iPhone browser and tablet frames for professional app screenshots" loading="lazy" style="width: 100%; height: auto; display: block;" />
 </div>
 </div>
 </div>
