fix: replace Material Icons logo with new colorful favicon.svg across all pages

--- a/feedback.html
+++ b/feedback.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <!-- Google Analytics -->
@@ -211,7 +211,7 @@
   <header>
     <div class="container">
       <a href="/" class="logo">
-        <span class="material-icons-round">dashboard_customize</span>
+        <img src="/favicon.svg" alt="PictriKit" width="28" height="28" style="width:1.75rem;height:1.75rem;">
         <span>PictriKit</span>
       </a>
       <a href="/app.html" class="back-link">
