--- a/shortcuts.html
+++ b/shortcuts.html
@@ -123,10 +123,7 @@
 <body>
     <nav>
         <div class="container">
-            <a href="/" class="nav-brand">
-                <span class="material-icons-round">dashboard_customize</span>
-                <span>PictriKit</span>
-            </a>
+            <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
             <div class="nav-links">
                 <a href="/#features">Features</a>
                 <a href="/#how-it-works">How it Works</a>
@@ -149,7 +146,7 @@
         <div class="mobile-nav-backdrop"></div>
         <div class="mobile-nav-content">
             <div class="mobile-nav-header">
-                <a href="/" class="nav-brand"><span class="material-icons-round">dashboard_customize</span><span>PictriKit</span></a>
+                <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
                 <button class="mobile-nav-close" aria-label="Close menu"><span class="material-icons-round">close</span></button>
             </div>
             <nav class="mobile-nav-links">
@@ -284,7 +281,7 @@
     <footer>
         <div class="container">
             <div style="display: flex; align-items: center; gap: 0.5rem;">
-                <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
+                <img src="/favicon.svg" alt="PictriKit" width="24" height="24" style="width:1.5rem;height:1.5rem;">
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
             <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
