--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -126,10 +126,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="/" class="nav-brand">
-                <span class="material-icons-round">dashboard_customize</span>
-                <span>PictriKit</span>
-            </a>
+            <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
             <a href="/app.html" class="nav-cta">Open Editor</a>
             <button class="mobile-menu-btn" aria-label="Open menu"><span class="hamburger-line"></span><span class="hamburger-line"></span><span class="hamburger-line"></span></button>
         </div>
@@ -139,7 +136,7 @@
         <div class="mobile-nav-backdrop"></div>
         <div class="mobile-nav-content">
             <div class="mobile-nav-header">
-                <a href="/" class="nav-brand"><span class="material-icons-round">dashboard_customize</span><span>PictriKit</span></a>
+                <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
                 <button class="mobile-nav-close" aria-label="Close menu"><span class="material-icons-round">close</span></button>
             </div>
             <nav class="mobile-nav-links">
@@ -284,7 +281,7 @@
     <footer>
         <div class="footer-container">
             <div style="display: flex; align-items: center; gap: 0.5rem;">
-                <span class="material-icons-round" style="color: #007AFF; font-size: 1.25rem;">dashboard_customize</span>
+                <img src="/favicon.svg" alt="PictriKit" width="20" height="20" style="width:1.25rem;height:1.25rem;">
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
                         <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #e5e7eb;">
