--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -122,9 +122,13 @@
     </script>
     
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <!-- Preconnect for faster font loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet"/>
     <style>
+        @font-face { font-family: 'Inter'; font-display: swap; src: local('Inter'); }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Inter', sans-serif; background: #f8fafc; color: #334155; line-height: 1.7; }
         .container { max-width: 800px; margin: 0 auto; padding: 0 1.5rem; }
