--- a/terms.html
+++ b/terms.html
@@ -33,7 +33,11 @@
   </script>
   
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <!-- Preconnect for faster font loading -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <style>
+    @font-face { font-family: 'Inter'; font-display: swap; src: local('Inter'); }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Text', 'Segoe UI', sans-serif; line-height: 1.6; color: #1d1d1f; background: #f5f5f7; }
     .container { max-width: 800px; margin: 0 auto; padding: 40px 20px; }
