perf: add width/height to lazy-loaded images for CLS prevention

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@ Open Web Editor
 </div>
 <div class="showcase-image" style="flex: 1.2;">
 <div class="screenshot-frame" style="max-width: 700px; box-shadow: 0 25px 60px -12px rgba(0,0,0,0.2);">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM2.png" alt="PictriKit focus layout mode - highlight main screenshot with supporting thumbnails for app showcase" loading="lazy" style="width: 100%; height: auto; display: block;" />
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM2.png" alt="PictriKit focus layout mode - highlight main screenshot with supporting thumbnails for app showcase" loading="lazy" width="700" height="438" style="width: 100%; height: auto; display: block;" />
 </div>
 </div>
 </div>
@@ -742,7 +742,7 @@ Open Web Editor
 </div>
 <div class="showcase-image" style="flex: 1.2;">
 <div class="screenshot-frame" style="max-width: 700px; box-shadow: 0 25px 60px -12px rgba(0,0,0,0.2);">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM.png" alt="PictriKit style customization panel - adjust padding gaps colors and corner radius for screenshot layouts" loading="lazy" style="width: 100%; height: auto; display: block;" />
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_09_AM.png" alt="PictriKit style customization panel - adjust padding gaps colors and corner radius for screenshot layouts" loading="lazy" width="700" height="438" style="width: 100%; height: auto; display: block;" />
 </div>
 </div>
 </div>
@@ -782,7 +782,7 @@ Open Web Editor
 </div>
 <div class="showcase-image" style="flex: 1.2;">
 <div class="screenshot-frame" style="max-width: 700px; box-shadow: 0 25px 60px -12px rgba(0,0,0,0.2);">
-<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_10_AM.png" alt="PictriKit device mockup frames - iPhone browser and tablet frames for professional app screenshots" loading="lazy" style="width: 100%; height: auto; display: block;" />
+<img src="./assets/screenshots/PictriKit-Screenshot-Layout-Tool-01-06-2026_12_10_AM.png" alt="PictriKit device mockup frames - iPhone browser and tablet frames for professional app screenshots" loading="lazy" width="700" height="438" style="width: 100%; height: auto; display: block;" />
 </div>
 </div>
 </div>
