--- a/app.html
+++ b/app.html
@@ -55,7 +55,7 @@
   </script>
   
   <!-- Favicon -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="apple-touch-icon" href="/assets/images/icon-180.svg">
   
