--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -121,7 +121,7 @@
     }
     </script>
     
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <!-- Preconnect for faster font loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -205,7 +205,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
+            <a href="/" class="nav-brand"><img src="/favicon.svg?v=2" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
             <a href="/app.html" class="nav-cta">Open Editor</a>
             <button class="mobile-menu-btn" aria-label="Open menu" aria-expanded="false">
                 <span class="hamburger-line"></span>
@@ -219,7 +219,7 @@
         <div class="mobile-nav-backdrop"></div>
         <div class="mobile-nav-content">
             <div class="mobile-nav-header">
-                <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
+                <a href="/" class="nav-brand"><img src="/favicon.svg?v=2" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
                 <button class="mobile-nav-close" aria-label="Close menu"><span class="material-icons-round">close</span></button>
             </div>
             <nav class="mobile-nav-links">
@@ -382,13 +382,13 @@
         </a>
       </div>
       <div style="text-align:center;margin-top:1.5rem;">
-        <a href="/" style="color:#007AFF;text-decoration:none;font-size:0.875rem;">‚Üê Back to Home</a>
+        <a href="/" style="color:#007AFF;text-decoration:none;font-size:0.875rem;">‚Ü?Back to Home</a>
       </div>
     </section>
     <footer>
         <div class="footer-container">
             <div style="display: flex; align-items: center; gap: 0.5rem;">
-                <img src="/favicon.svg" alt="PictriKit" width="20" height="20" style="width:1.25rem;height:1.25rem;">
+                <img src="/favicon.svg?v=2" alt="PictriKit" width="20" height="20" style="width:1.25rem;height:1.25rem;">
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
                         <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #e5e7eb;">
@@ -401,7 +401,7 @@
                     <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
                     <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
                 </div>
-            </div><div style="color: #6b7280; font-size: 0.8125rem;">Â©µ?2026 PictriKit</div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">Â©?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
