--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 }
 </script>
 <!-- Favicon -->
-<link rel="icon" href="/favicon.svg" type="image/svg+xml">
+<link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/assets/images/icon-180.svg">
 <!-- PWA -->
 <link rel="manifest" href="/manifest.json">
@@ -452,7 +452,7 @@
 <nav>
 <div class="container">
 <a href="/" class="nav-brand">
-<img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;">
+<img src="/favicon.svg?v=2" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;">
 <span>PictriKit</span>
 </a>
 <div class="nav-links">
@@ -479,7 +479,7 @@
 <div class="mobile-nav-content">
 <div class="mobile-nav-header">
 <a href="/" class="nav-brand">
-<img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;">
+<img src="/favicon.svg?v=2" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;">
 <span>PictriKit</span>
 </a>
 <button class="mobile-nav-close" aria-label="Close menu">
@@ -864,7 +864,7 @@ Open Web Editor
 <footer>
 <div class="container">
 <div class="flex items-center gap-2">
-<img src="/favicon.svg" alt="PictriKit" width="24" height="24" style="width:1.5rem;height:1.5rem;">
+<img src="/favicon.svg?v=2" alt="PictriKit" width="24" height="24" style="width:1.5rem;height:1.5rem;">
 <span class="font-bold text-xl">PictriKit</span>
 </div>
 <div style="color: #9ca3af; font-size: 0.875rem;">
