--- a/privacy.html
+++ b/privacy.html
@@ -32,7 +32,7 @@
   }
   </script>
   
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
   <!-- Preconnect for faster font loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,7 +55,7 @@
 </head>
 <body>
   <header>
-    <a href="/">‚Üê Back to PictriKit</a>
+    <a href="/">‚Ü?Back to PictriKit</a>
   </header>
   <div class="container">
     <div class="content">
