--- a/templates.html
+++ b/templates.html
@@ -38,7 +38,7 @@
     </script>
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.svg?v=2" type="image/svg+xml">
     <!-- Preconnect for faster font loading -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -110,7 +110,7 @@
 <body>
     <nav>
         <div class="container">
-            <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
+            <a href="/" class="nav-brand"><img src="/favicon.svg?v=2" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
             <div class="nav-links">
                 <a href="/#features">Features</a>
                 <a href="/#how-it-works">How it Works</a>
@@ -133,7 +133,7 @@
         <div class="mobile-nav-backdrop"></div>
         <div class="mobile-nav-content">
             <div class="mobile-nav-header">
-                <a href="/" class="nav-brand"><img src="/favicon.svg" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
+                <a href="/" class="nav-brand"><img src="/favicon.svg?v=2" alt="PictriKit" width="32" height="32" style="width:2rem;height:2rem;"><span>PictriKit</span></a>
                 <button class="mobile-nav-close" aria-label="Close menu"><span class="material-icons-round">close</span></button>
             </div>
             <nav class="mobile-nav-links">
@@ -242,7 +242,7 @@
     <footer>
         <div class="container">
             <div style="display: flex; align-items: center; gap: 0.5rem;">
-                <img src="/favicon.svg" alt="PictriKit" width="24" height="24" style="width:1.5rem;height:1.5rem;">
+                <img src="/favicon.svg?v=2" alt="PictriKit" width="24" height="24" style="width:1.5rem;height:1.5rem;">
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
             <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
